--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "ky": "^0.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.12.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
